# cycle

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
define/: Cargo.toml  README.md  build.zig
define/src/: analysis.rs  ir.rs  lib.rs  parse.rs
define/test/: Cargo.toml
define/test/src/: lib.rs
lang/: build.zig  build.zig.zon
lang/src/: Tokenizer.zig  ast.zig  main.zig  token.zig
lib/: Cargo.toml  build.zig
lib/src/: SharedMem.zig  channel.zig  define.rs  define.zig  definition.zig  init.zig  lib.rs  lib.zig  object.zig  render.rs  render.zig  serde.zig  ui.zig
lib/src/channel/: args.rs  de.rs  messages.rs  mod.rs  ser.rs  sync.rs  view.rs
lib/src/object/: channel.zig  index.zig  meta.zig  read.zig  write.zig
lib/src/render/: mod.rs  vulkan.zig
lib/src/ui/: geometry.zig  layout.zig  linear.zig  meta.zig  nodes.zig  render.zig  tree.zig
lib/src/ui/nodes/: center.zig  fill.zig  size.zig
rpc/: Cargo.toml
rpc/src/: lib.rs
src/: LibVersion.zig  ObjectTable.zig  Plugin.zig  PluginDir.zig  Store.zig  Type.zig  TypeIndex.zig  TypeLayout.zig  TypeTable.zig  composite.zig  free_list.zig  gen_list.zig  launch.rs  lib.rs  main.rs  main.zig  raw.zig  render.hlsl  system.zig  ui.zig  window.rs  windows.zig  zig.zig
src/ObjectTable/: Object.zig  serde.zig
src/Store/: RawList.zig  gen_list.zig
src/Type/: define.zig
src/channel/: args.rs  mod.rs  sync.rs  view.rs
src/composite/: Commands.zig  Compositor.zig  Context.zig  Objects.zig  Pipeline.zig  Swapchain.zig  vulkan.zig
src/composite/shaders/: frag.glsl  vert.glsl
src/render/: context.cc  internal.cc  internal.h  object.cc  render.cc  render.h  target.cc  text.cc  zig_types.h
src/repo/: definition.rs  mod.rs  object.rs
src/ui/: Grid.zig  RenderNode.zig  Root.zig  View.zig  meta.zig  runtime.zig
src/ui/render/: Context.zig  Renderer.zig  context.cc  internal.h  object.cc  render.h  text.cc  window.cc  zig_types.h
src/ui/text/: LayoutBuffer.zig
