[package]
name = "cycle"
version = "0.1.0"
edition = "2021"

authors = ["dcov <dcov@pm.me>"]
description = "An object editor"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/dcov/cycle"
repository = "https://github.com/dcov/cycle"

[dependencies]
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
libcycle = { path = "lib" }
sha2 = "0.10.6"
url = "2.3.1"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
