[package]
name = "cycle"
version = "0.1.0"
edition = "2021"

authors = ["dcov <dcov@pm.me>"]
description = "An object editor"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/dcov/cycle"
repository = "https://github.com/dcov/cycle"

[dependencies]
libcycle = { path = "lib" }

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
