[package]
name = "libcycle_define"
version = "0.1.0"
edition = "2021"

authors = ["dcov <dcov@pm.me>"]
description = "Proc macro for generating Cycle types"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/dcov/cycle"
repository = "https://github.com/dcov/cycle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.51"
syn = "1.0.107"
quote = "1.0.23"
