[package]
name = "libcycle_define"
version = "0.1.0"
edition = "2021"

authors = ["dcov <dcov@pm.me>"]
description = "Proc macro for generating Cycle types"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/dcov/cycle"
repository = "https://github.com/dcov/cycle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
syn = { version = "2.0.14" }
quote = "1.0.26"
