[package]
name = "libcycle"
version = "0.1.0"
edition = "2021"

authors = ["dcov <dcov@pm.me>"]
description = "Framework for Cycle plugins."
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/dcov/cycle"
repository = "https://github.com/dcov/cycle"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]
